Задание 6 - Начинаем вёрстку препроцессором. Исправления ошибок от трэвиса

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,7 +19,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
   color: @black;
@@ -42,42 +42,47 @@ ul {
   margin: -1px;
 }
 
-
 @import "./blocks/site-container.less";
 
 /*Page header*/
+
 @import "./blocks/page-header.less";
 @import "./blocks/main-nav.less";
 @import "./blocks/site-list.less";
 
 /*Page main*/
+
 @import "./blocks/page-main.less";
 @import "./blocks/welcome-text.less";
 @import "./blocks/short-welcome.less";
 
-  /*Page main index.html*/
-  @import "./blocks/welcome.less";
-  @import "./blocks/reasons.less";
-  @import "./blocks/features-list.less";
-  @import "./blocks/reasons-list.less";
-  @import "./blocks/hotel-search.less";
-  @import "./blocks/map.less";
+/*Page main index.html*/
 
-  /*Page main photo.html*/
-  @import "./blocks/photos.less";
-  @import "./blocks/gallary.less";
-  @import "./blocks/video-player.less";
+@import "./blocks/welcome.less";
+@import "./blocks/reasons.less";
+@import "./blocks/features-list.less";
+@import "./blocks/reasons-list.less";
+@import "./blocks/hotel-search.less";
+@import "./blocks/map.less";
 
-  /*Page main form.html*/
-  @import "./blocks/review.less";
-  @import "./blocks/introduce.less";
-  @import "./blocks/contacts.less";
-  @import "./blocks/impression.less";
-  @import "./blocks/attractions.less";
-  @import "./blocks/emotions.less";
-  @import "./blocks/sending-fail.less";
-  @import "./blocks/sending-success.less";
+/*Page main photo.html*/
+
+@import "./blocks/photos.less";
+@import "./blocks/gallary.less";
+@import "./blocks/video-player.less";
+
+/*Page main form.html*/
+
+@import "./blocks/review.less";
+@import "./blocks/introduce.less";
+@import "./blocks/contacts.less";
+@import "./blocks/impression.less";
+@import "./blocks/attractions.less";
+@import "./blocks/emotions.less";
+@import "./blocks/sending-fail.less";
+@import "./blocks/sending-success.less";
 
 /*Page footer*/
+
 @import "./blocks/page-footer.less";
 @import "./blocks/social.less";
