--- a/source/less/blocks/site-container.less
+++ b/source/less/blocks/site-container.less
@@ -1,7 +1,20 @@
 .site-container {
-  width: 350px;
+  width: @mobile-width;
   margin-left: auto;
   margin-right: auto;
 
   background-color: @white;
+}
+
+@media (min-width: @tablet-width) {
+  .site-container {
+    width: @tablet-width;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .site-container {
+    width: @desktop-width;
+    box-shadow: 0px 5px 15px 0px rgba(0, 1, 1, 0.2);
+  }
 }
