--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,12 +1,112 @@
 .site-list {
-  border: 2px solid @green;
-  margin: 2px;
-  padding: 2px;
+  //  border: 2px solid @green;
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.site-list a {
+  color: @black;
 }
 
 .site-list__item {
+  text-align: center;
   font-weight: bold;
   font-size: 18px;
   line-height: 40px;
   background-color: @light-blue;
+  color: @white;
+  width: 100%;
+
+  border: 1px solid black;
+}
+
+@media (min-width: @tablet-width) {
+  .site-list {
+    flex-direction: row;
+
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0 4%;
+  }
+
+  .site-list a {
+    color: @black;
+  }
+
+  .site-list__item {
+    font-size: 14px;
+    line-height: 26px;
+    background-color: @white;
+    width: 20%;
+    border: none;
+  }
+
+  .site-list__item--left {
+    text-align: left;
+  }
+
+  .site-list__item--right {
+    text-align: right;
+  }
+
+  .site-list__item--left + .site-list__item--left {
+    margin-left: 10px;
+  }
+
+  .site-list__item--right + .site-list__item--right {
+    margin-left: 10px;
+  }
+
+  .site-list__item--left + .site-list__item--right {
+    margin-left: auto;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .site-list {
+    flex-direction: row;
+
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0 6%;
+  }
+
+  .site-list a {
+    color: @black;
+  }
+
+  .site-list__item {
+    font-size: 14px;
+    line-height: 26px;
+    background-color: @white;
+    width: 20%;
+    border: none;
+  }
+
+  .site-list__item--left {
+    text-align: left;
+  }
+
+  .site-list__item--right {
+    text-align: right;
+  }
+
+  .site-list__item--left + .site-list__item--left {
+    margin-left: 30px;
+  }
+
+  .site-list__item--right + .site-list__item--right {
+    margin-left: 30px;
+  }
+
+  .site-list__item--left + .site-list__item--right {
+    margin-left: auto;
+  }
+
 }
