Верстка заголовка сайта ч2

--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -8,7 +8,7 @@
 }
 
 .site-list a {
-  color: @black;
+  color: @white;
 }
 
 .site-list__item {
@@ -17,7 +17,7 @@
   font-size: 18px;
   line-height: 40px;
   background-color: @light-blue;
-  color: @white;
+
   width: 100%;
 
   border: 1px solid black;
@@ -45,6 +45,8 @@
     background-color: @white;
     width: 20%;
     border: none;
+    margin-top: 12px;
+    margin-bottom: 12px;
   }
 
   .site-list__item--left {
@@ -108,5 +110,4 @@
   .site-list__item--left + .site-list__item--right {
     margin-left: auto;
   }
-
 }
