--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -5,9 +5,9 @@
   position: relative;
 
   min-height: 230px;
-  //  border: 2px solid @red;
-  //  margin: 0px;
-  //  padding: 0px;
+  border: 2px solid @red;
+  margin: 2px;
+  padding: 2px;
 }
 
 .page-header__logo-wrapper {
@@ -49,7 +49,7 @@
 
   .page-header {
     position: relative;
-    min-height: 56px;
+    min-height: 0;
     justify-content: center;
   }
 }
@@ -61,7 +61,7 @@
 
   .page-header {
     position: relative;
-    min-height: 56px;
+    min-height: 0;
     justify-content: center;
   }
 }
