--- a/source/less/blocks/site-container.less
+++ b/source/less/blocks/site-container.less
@@ -15,6 +15,6 @@
 @media (min-width: @desktop-width) {
   .site-container {
     width: @desktop-width;
-    box-shadow: 0px 5px 15px 0px rgba(0, 1, 1, 0.2);
+    box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
   }
 }
