Верстка адаптивной сетки главной страницы

--- a/source/less/blocks/hotel-search.less
+++ b/source/less/blocks/hotel-search.less
@@ -1,9 +1,9 @@
 .hotel-search {
   border: 2px solid @red;
   margin: 2px;
-  padding: 2px;
 
   text-align: center;
+  padding: 20px 50px;
 }
 
 .hotel-search__header {
@@ -25,4 +25,6 @@
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
+  border: none;
+  padding: 10px 10px;
 }
