--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,5 +1,5 @@
 .site-list {
-  //  border: 2px solid @green;
+  //border: 2px solid @green;
   margin: 0;
   padding: 0;
 
@@ -19,8 +19,6 @@
   background-color: @light-blue;
 
   width: 100%;
-
-  border: 1px solid black;
 }
 
 @media (min-width: @tablet-width) {
@@ -44,9 +42,13 @@
     line-height: 26px;
     background-color: @white;
     width: 20%;
-    border: none;
+    // border: none;
     margin-top: 12px;
     margin-bottom: 12px;
+
+    border: 2px solid black;
+    // margin: 2px;
+    // padding: 2px;
   }
 
   .site-list__item--left {
@@ -89,6 +91,10 @@
     background-color: @white;
     width: 20%;
     border: none;
+
+    // border: 2px solid black;
+    // margin: 2px;
+    // padding: 2px;
   }
 
   .site-list__item--left {
