--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,7 +1,7 @@
 .page-footer {
   border: 2px solid @red;
   margin: 2px;
-  padding: 2px;
+  padding: 20px;
 
   text-align: center;
 }
@@ -14,4 +14,39 @@
 
 .page-footer__develop-link {
   line-height: 26px;
+}
+
+.social {
+  display: flex;
+  justify-content: center;
+}
+
+.social__item {
+  border: 2px solid @black;
+  margin: 2px;
+  padding: 2px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer {
+    display: flex;
+    justify-content: center;
+  }
+
+  .page-footer__develop-link {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer {
+    display: flex;
+    justify-content: center;
+  }
+
+  .page-footer__develop-link {
+    display: flex;
+    align-items: center;
+  }
 }
