--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -8,3 +8,24 @@
   background-color: @light-blue;
   text-align: center;
 }
+
+.welcome__text-image {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+@media (min-width: @tablet-width) {
+  .welcome {
+    background-image: url("../../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-color: @light-blue;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .welcome {
+    background-image: url("../../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-color: @light-blue;
+  }
+}
