--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -30,7 +30,7 @@
 @media (min-width: @tablet-width) {
   .page-footer {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
   }
 
   .page-footer__develop-link {
@@ -42,7 +42,7 @@
 @media (min-width: @desktop-width) {
   .page-footer {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
   }
 
   .page-footer__develop-link {
