--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -41,8 +41,13 @@
     justify-content: center;
   }
 
+  .reasons--image-left .reasons__photo {
+    order: -1;
+  }
+
   .reasons__item {
     padding: 20px;
+    width: 33%;
   }
 
   .reasons__photo {
