--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -18,6 +18,8 @@
   line-height: 40px;
   background-color: @light-blue;
 
+  border: 2px solid black;
+
   width: 100%;
 }
 
@@ -90,9 +92,8 @@
     line-height: 26px;
     background-color: @white;
     width: 20%;
-    border: none;
 
-    // border: 2px solid black;
+    border: 2px solid black;
     // margin: 2px;
     // padding: 2px;
   }
