--- a/source/less/blocks/gallary.less
+++ b/source/less/blocks/gallary.less
@@ -30,6 +30,7 @@
 @media (min-width: @tablet-width) {
   .gallary {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
   }
 
@@ -37,29 +38,17 @@
     width: 100%;
   }
 
-  .gallary__item:nth-child(2) {
-    width: 48%;
-  }
-
-  .gallary__item:nth-child(3) {
-    width: 48%;
-  }
-
+  .gallary__item:nth-child(2),
+  .gallary__item:nth-child(3),
   .gallary__item:nth-child(4) {
-    width: 48%;
+    width: 49.4%;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .gallary__item:nth-child(2) {
-    width: 32%;
-  }
-
-  .gallary__item:nth-child(3) {
-    width: 32%;
-  }
-
+  .gallary__item:nth-child(2),
+  .gallary__item:nth-child(3),
   .gallary__item:nth-child(4) {
-    width: 32%;
+    width: 32.9%;
   }
 }
