--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -14,6 +14,7 @@
 
 .page-footer__develop-link {
   line-height: 26px;
+  color: @black;
 }
 
 .social {
@@ -34,19 +35,10 @@
   }
 
   .page-footer__develop-link {
-    display: flex;
-    align-items: center;
+    padding-top: 17px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .page-footer {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .page-footer__develop-link {
-    display: flex;
-    align-items: center;
-  }
+  /*desktop*/
 }
