--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,3 +1,14 @@
 .main-nav {
   /*main-nav*/
+  margin-bottom: 47px;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav {
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+/*desktop*/
 }
