--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -4,28 +4,34 @@
   justify-content: flex-start;
   position: relative;
 
-  min-height: 230px;
+  // min-height: 230px;
   border: 2px solid @red;
   margin: 2px;
   padding: 2px;
 }
 
-.page-header__logo-wrapper {
+/*.page-header__logo-wrapper {
   position: relative;
-}
+}*/
 
 .page-header__logo {
   position: absolute;
-  top: 0;
-  left: 50%;
-  margin-left: -51px;
+  // top: 0;
+  bottom: -40px;
+  // left: 50%;
+  left: 0;
+  right: 0;
+  // margin-left: -51px;
+  margin: auto;
+  width: 102px;
 }
 
 .page-header__open-nav {
   position: absolute;
-  top: 17px;
+  // top: 17px;
+  bottom: 10px;
   right: 20px;
-  margin-left: -51px;
+  // margin-left: -51px;
 
   border: none;
   color: @light-blue;
@@ -37,19 +43,20 @@
     display: none;
   }
 
-  .page-header__logo-wrapper {
+  /*.page-header__logo-wrapper {
     position: absolute;
     top: 0;
     left: 50%;
-  }
+  }*/
 
   .page-header__logo {
-    position: initial;
+    // position: absolute;
+    top: 0;
   }
 
   .page-header {
     position: relative;
-    min-height: 0;
+    // min-height: 0;
     justify-content: center;
   }
 }
