--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -11,6 +11,16 @@
   color: @white;
 }
 
+.reasons--other {
+  background-color: @light-grey;
+  color: @black;
+}
+
+.reasons--other .reasons__description,
+.reasons--other .reasons__number {
+  color: @grey;
+}
+
 .reasons__header {
   font-weight: bold;
   font-size: 18px;
@@ -27,7 +37,7 @@
     justify-content: center;
   }
 
-  .reasons--image-left .reasons__photo {
+  .reasons--reverse .reasons__photo {
     order: -1;
   }
 
