--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,4 +1,4 @@
-.welcome {
+.promo {
   border: 2px solid @red;
   margin: 2px;
   padding: 2px;
@@ -9,19 +9,19 @@
   text-align: center;
 }
 
-.welcome__text-image {
+.promo__text-image {
   padding-top: 50px;
   padding-bottom: 50px;
 }
 
 @media (min-width: @tablet-width) {
-  .welcome {
+  .promo {
     background-image: url("../../img/bg-back-tablet@1x.jpg");
   }
 }
 
 @media (min-width: @desktop-width) {
-  .welcome {
+  .promo {
     background-image: url("../../img/bg-back-desktop@1x.jpg");
   }
 }
