--- a/source/less/blocks/short-promo.less
+++ b/source/less/blocks/short-promo.less
@@ -1,4 +1,4 @@
-.short-welcome {
+.short-promo {
   border: 2px solid @red;
   margin: 2px;
   padding: 2px;
@@ -9,19 +9,19 @@
   text-align: center;
 }
 
-.short-welcome__short-text-image {
+.short-promo__short-text-image {
   padding-top: 50px;
   padding-bottom: 50px;
 }
 
 @media (min-width: @tablet-width) {
-  .short-welcome {
+  .short-promo {
     background-image: url("../../img/bg-back-tablet@1x.jpg");
   }
 }
 
 @media (min-width: @desktop-width) {
-  .short-welcome {
+  .short-promo {
     background-image: url("../../img/bg-back-desktop@1x.jpg");
   }
 }
