--- a/source/less/style.less
+++ b/source/less/style.less
@@ -55,11 +55,11 @@ ul {
 
 @import "./blocks/page-main.less";
 @import "./blocks/welcome-text.less";
-@import "./blocks/short-welcome.less";
+@import "./blocks/short-promo.less";
 
 /*Page main index.html*/
 
-@import "./blocks/welcome.less";
+@import "./blocks/promo.less";
 @import "./blocks/reasons.less";
 @import "./blocks/features-list.less";
 @import "./blocks/reasons-list.less";
