Исправление страницы form

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -6,10 +6,14 @@
   line-height: 26px;
 }
 
-.contacts__caption {
-  font-size: 18px;
-  text-align: center;
-  font-weight: bold;
+// .contacts__caption {
+//   font-size: 18px;
+//   text-align: center;
+//   font-weight: bold;
+// }
+
+.contacts__text-input-element {
+  padding: 5px;
 }
 
 .contacts__label {
