--- a/source/less/blocks/emotions.less
+++ b/source/less/blocks/emotions.less
@@ -6,10 +6,14 @@
   line-height: 26px;
 }
 
-.emotions__caption {
-  font-size: 18px;
-  text-align: center;
-  font-weight: bold;
+// .emotions__caption {
+//   font-size: 18px;
+//   text-align: center;
+//   font-weight: bold;
+// }
+
+.emotions__description-element {
+  padding: 5px;
 }
 
 .emotions__description {
