--- a/source/less/style.less
+++ b/source/less/style.less
@@ -74,7 +74,7 @@ ul {
 
 /*Page main form.html*/
 
-@import "./blocks/review.less";
+@import "./blocks/review-form.less";
 @import "./blocks/introduce.less";
 @import "./blocks/contacts.less";
 @import "./blocks/impression.less";
