--- a/source/less/blocks/attractions.less
+++ b/source/less/blocks/attractions.less
@@ -6,10 +6,14 @@
   line-height: 26px;
 }
 
-.attractions__caption {
-  font-size: 18px;
-  text-align: center;
-  font-weight: bold;
+// .attractions__caption {
+//   font-size: 18px;
+//   text-align: center;
+//   font-weight: bold;
+// }
+
+.attractions__checkbox-element {
+  padding: 5px;
 }
 
 .attractions__label {
