--- a/source/less/blocks/impression.less
+++ b/source/less/blocks/impression.less
@@ -6,10 +6,14 @@
   line-height: 26px;
 }
 
-.impression__caption {
-  font-size: 18px;
-  text-align: center;
-  font-weight: bold;
+// .impression__caption {
+//   font-size: 18px;
+//   text-align: center;
+//   font-weight: bold;
+// }
+
+.impression__radio-button-element {
+  padding: 5px;
 }
 
 .impression__label {
