--- a/source/less/blocks/introduce.less
+++ b/source/less/blocks/introduce.less
@@ -6,10 +6,14 @@
   line-height: 26px;
 }
 
-.introduce__caption {
-  font-size: 18px;
-  text-align: center;
-  font-weight: bold;
+// .introduce__caption {
+//   font-size: 18px;
+//   text-align: center;
+//   font-weight: bold;
+// }
+
+.introduce__text-input-element {
+  padding: 5px;
 }
 
 .introduce__label {
