--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -5,9 +5,9 @@
   position: relative;
 
   // min-height: 230px;
-  border: 2px solid @red;
-  margin: 2px;
-  padding: 2px;
+  // border: 2px solid @red;
+  // margin: 2px;
+  // padding: 2px;
 }
 
 /*.page-header__logo-wrapper {
@@ -17,7 +17,7 @@
 .page-header__logo {
   position: absolute;
   // top: 0;
-  bottom: -40px;
+  bottom: -36px;
   // left: 50%;
   left: 0;
   right: 0;
@@ -30,7 +30,7 @@
   position: absolute;
   // top: 17px;
   bottom: 10px;
-  right: 20px;
+  right: 14px;
   // margin-left: -51px;
 
   border: none;
