--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -42,7 +42,7 @@
 
     &:last-child a {
       border-bottom: none;
-      box-shadow: 0px -3px 3px 0 rgba(0, 1, 1, 0.2) inset;
+      box-shadow: 0 -3px 3px 0 rgba(0, 1, 1, 0.2) inset;
     }
   }
 }
