--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,7 +1,9 @@
 .promo {
-  border: 2px solid @red;
+  /*border: 2px solid @red;
   margin: 2px;
-  padding: 2px;
+  padding: 2px;*/
+
+  position: relative;
 
   background-image: url("../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
@@ -10,9 +12,23 @@
 }
 
 .promo__text-image {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 90px;
+  padding-bottom: 80px;
 }
+
+// @media @mobile-width-only {
+//   .promo::after {
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     background-image: url("../../img/bg-intro-triangle-mobile.svg");
+//     width: 100%;
+//     top: 364px;
+//     content: "";
+//     background-repeat: no-repeat;
+//     z-index: 1;
+//   }
+// }
 
 @media (min-width: @tablet-width) {
   .promo {
