--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -1,14 +1,20 @@
 .reasons {
-  border: 2px solid @red;
-  margin: 2px;
-  padding: 2px;
+  // border: 1px solid @red;
+  // margin: 2px;
+  // padding: 2px;
 
   text-align: center;
+  margin: 0;
 }
 
 .reasons__item {
   background-color: @light-blue;
   color: @white;
+  margin: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .reasons--other {
@@ -22,9 +28,20 @@
 }
 
 .reasons__header {
+  margin: 0;
+  padding-bottom: 9px;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
+}
+
+.reasons__number {
+  margin: 0;
+  padding-bottom: 15px;
+}
+
+.reasons__description {
+  margin: 0;
 }
 
 .reasons__photo {
