--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -34,10 +34,40 @@
 
       border-top: 1px solid #9ac2db;
       border-bottom: 1px solid #678fa8;
+
+      &:hover,
+      &:focus {
+        background-color: #669ec0;
+      }
+
+      &:active {
+        background-color: #5496bd;
+        opacity: 0.3;
+      }
     }
 
     &:first-child a {
       border-top: 1px solid @light-blue;
+
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        top: 26px;
+        right: 17px;
+        width: 28px;
+        height: 4px;
+        background-color: @white;
+        cursor: pointer;
+      }
+
+      &::before {
+        transform: rotate(45deg);
+      }
+
+      &::after {
+        transform: rotate(-45deg);
+      }
     }
 
     &:last-child a {
