--- a/source/less/blocks/welcome-text.less
+++ b/source/less/blocks/welcome-text.less
@@ -1,21 +1,30 @@
 .welcome-text {
-  border: 2px solid @red;
-  margin: 2px;
-  padding: 2px;
+  // border: 2px solid @red;
+  // margin: 2px;
+  // padding: 2px;
+
+  position: relative;
 
   line-height: 26px;
   text-align: center;
+  padding-top: 20px;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 20px;
 }
+
 
 .welcome-text__about {
   color: @black;
   font-weight: bold;
   font-size: 18px;
+  padding-bottom: 10px;
 }
 
 .welcome-text__reasons {
   color: @grey;
   font-size: 14px;
+  padding-bottom: 8px;
 }
 
 .welcome-text__reasons--narrow {
