--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,7 +1,7 @@
 .map {
-  border: 2px solid @red;
-  margin: 2px;
-  padding: 2px;
+  // border: 2px solid @red;
+  // margin: 2px;
+  // padding: 2px;
 }
 
 .map__image {
