--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,5 +1,12 @@
 .social {
-  border: 2px solid @green;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
+
+.social__item {
+  border: 2px solid @black;
   margin: 2px;
   padding: 2px;
 }
