--- a/source/less/blocks/hotel-search.less
+++ b/source/less/blocks/hotel-search.less
@@ -1,18 +1,27 @@
 .hotel-search {
-  border: 2px solid @red;
-  margin: 2px;
+  // border: 2px solid @red;
+  // margin: 2px;
 
   text-align: center;
-  padding: 20px 50px;
+  // padding: 20px 50px;
+  margin: 0;
+  padding-top: 29px;
+  padding-bottom: 50px;
 }
 
 .hotel-search__header {
+  margin: 0;
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
 }
 
 .hotel-search__description {
+  margin: 0;
+  padding-top: 20px;
+  padding-bottom: 35px;
+  padding-left: 20px;
+  padding-right: 20px;
   color: @grey;
   line-height: 24px;
 }
@@ -26,5 +35,5 @@
   font-size: 21px;
   line-height: 26px;
   border: none;
-  padding: 10px 10px;
+  padding: 15px 47px;
 }
