--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,31 +1,24 @@
 .page-footer {
-  border: 2px solid @red;
-  margin: 2px;
-  padding: 20px;
-
+  // border: 2px solid @red;
+  // margin: 2px;
+  // padding: 20px;
+  margin: 0;
   text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .page-footer__hashteg {
+  margin: 0;
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
+  padding-bottom: 32px;
 }
 
 .page-footer__develop-link {
   line-height: 26px;
   color: @black;
-}
-
-.social {
-  display: flex;
-  justify-content: center;
-}
-
-.social__item {
-  border: 2px solid @black;
-  margin: 2px;
-  padding: 2px;
 }
 
 @media (min-width: @tablet-width) {
