--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -5,22 +5,77 @@
 
   text-align: center;
   margin: 0;
+  padding: 0;
 }
 
 .reasons__item {
   background-color: @light-blue;
   color: @white;
   margin: 0;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 25px;
+  padding-right: 25px;
   padding-top: 40px;
   padding-bottom: 40px;
 }
 
 .reasons--other {
+  padding-top: 30px;
+  padding-bottom: 25px;
   background-color: @light-grey;
   color: @black;
+
+  &:first-child {
+    padding-top: 20px;
+  }
+
+  &:nth-child(2) {
+    position: relative;
+
+    &::before {
+      position: absolute;
+      left: 20px;
+      top: 0;
+      content: "";
+      height: 1px;
+      width: 280px;
+      border-top: 1px solid #d6d6d6;
+    }
+
+    &::after {
+      position: absolute;
+      left: 20px;
+      bottom: 0;
+      content: "";
+      height: 1px;
+      width: 280px;
+      border-bottom: 1px solid #d6d6d6;
+    }
+  }
 }
+
+// .reasons--other:nth-child(2) {
+//   position: relative;
+// }
+
+// .reasons--other:nth-child(2)::before {
+//   position: absolute;
+//   left: 20px;
+//   top: 0;
+//   content: "";
+//   height: 1px;
+//   width: 280px;
+//   border-top: 1px solid #d6d6d6;
+// }
+
+// .reasons--other:nth-child(2)::after {
+//   position: absolute;
+//   left: 20px;
+//   bottom: 0;
+//   content: "";
+//   height: 1px;
+//   width: 280px;
+//   border-bottom: 1px solid #d6d6d6;
+// }
 
 .reasons--other .reasons__description,
 .reasons--other .reasons__number {
