Задание 5 - верстка modile версии index.html ч.3

--- a/source/less/blocks/hotel-search.less
+++ b/source/less/blocks/hotel-search.less
@@ -36,4 +36,19 @@
   line-height: 26px;
   border: none;
   padding: 15px 47px;
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    background-color: #5496bd;
+    color: rgba(255, 255, 255, 0.3);
+  }
+
+  &:disabled {
+    background-color: #e5e5e5;
+  }
 }
