--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -3,10 +3,55 @@
   justify-content: center;
   margin: 0;
   padding: 0;
+  padding-bottom: 40px;
+}
+
+.social__link {
+  height: 48px;
+  min-width: 46px;
+  background-color: #81b3d2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &:hover,
+  &:focus {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    background-color: #5496bd;
+  }
+
+  &:active path {
+    fill: #88b6d1;
+  }
 }
 
 .social__item {
-  border: 2px solid @black;
-  margin: 2px;
-  padding: 2px;
+  padding-top: 4px;
+  padding-left: 3px;
+  padding-right: 3px;
+
+  // border: 2px solid @black;
+  // margin: 2px;
+  // padding: 2px;
+}
+
+.page-footer__develop-link {
+  padding-bottom: 50px;
+
+  &:hover path,
+  &:focus path {
+    fill: #81b3d2;
+  }
+
+  &:active path {
+    fill: #b2b2b2;
+  }
+}
+
+.page-footer__develop-link svg {
+  vertical-align: middle;
+  padding-left: 10px;
 }
