--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -23,32 +23,37 @@
   padding-bottom: 25px;
   background-color: @light-grey;
   color: @black;
+}
 
-  &:first-child {
-    padding-top: 20px;
-  }
 
-  &:nth-child(2) {
-    position: relative;
-
-    &::before {
-      position: absolute;
-      left: 20px;
-      top: 0;
-      content: "";
-      height: 1px;
-      width: 280px;
-      border-top: 1px solid #d6d6d6;
+@media @mobile-width-only {
+  .reasons--other {
+    &:first-child {
+      padding-top: 20px;
     }
 
-    &::after {
-      position: absolute;
-      left: 20px;
-      bottom: 0;
-      content: "";
-      height: 1px;
-      width: 280px;
-      border-bottom: 1px solid #d6d6d6;
+    &:nth-child(2) {
+      position: relative;
+
+      &::before {
+        position: absolute;
+        left: 20px;
+        top: 0;
+        content: "";
+        height: 1px;
+        width: 280px;
+        border-top: 1px solid #d6d6d6;
+      }
+
+      &::after {
+        position: absolute;
+        left: 20px;
+        bottom: 0;
+        content: "";
+        height: 1px;
+        width: 280px;
+        border-bottom: 1px solid #d6d6d6;
+      }
     }
   }
 }
@@ -109,13 +114,30 @@
     justify-content: center;
   }
 
+  .reasons--other {
+    padding-bottom: 45px;
+  }
+
   .reasons--reverse .reasons__photo {
     order: -1;
   }
 
   .reasons__item {
-    padding: 20px;
-    width: 33%;
+    box-sizing: border-box;
+    padding-top: 45px;
+    width: 33.3%;
+  }
+
+  .reasons__header {
+    font-size: 21px;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  .reasons__description {
+    padding-top: 7px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .reasons__photo {
