Задание 5 - верстка index.html ч.5

--- a/source/less/blocks/hotel-search.less
+++ b/source/less/blocks/hotel-search.less
@@ -52,3 +52,32 @@
     background-color: #e5e5e5;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .hotel-search {
+    padding-bottom: 59px;
+  }
+
+  .hotel-search__header {
+    font-size: 30px;
+    padding-top: 25px;
+  }
+
+  .hotel-search__description {
+    padding-top: 31px;
+    padding-bottom: 43px;
+    padding-left: 150px;
+    padding-right: 150px;
+  }
+
+  .hotel-search__button {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 136px;
+    padding-right: 136px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  /*desktop*/
+}
