--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -25,10 +25,19 @@
   .page-footer {
     display: flex;
     justify-content: space-between;
+    padding-right: 60px;
+    padding-left: 60px;
+    padding-bottom: 0;
+  }
+
+  .page-footer__hashteg {
+    padding-top: 10px;
+    padding-bottom: 0;
   }
 
   .page-footer__develop-link {
-    padding-top: 17px;
+    padding-top: 7px;
+    margin-left: 5px;
   }
 }
 
