--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -68,8 +68,9 @@
 }
 
 @media (min-width: @desktop-width) {
-  .page-header {
-    position: relative;
-    justify-content: center;
-  }
+  // .page-header {
+  //   position: relative;
+  //   justify-content: center;
+  // }
+  
 }
