--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -55,3 +55,17 @@
   vertical-align: middle;
   padding-left: 10px;
 }
+
+@media (min-width: @tablet-width) {
+  .social {
+    padding-bottom: 40px;
+  }
+
+  .social__item {
+    padding-top: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  /*desktop*/
+}
