--- a/source/less/blocks/welcome-text.less
+++ b/source/less/blocks/welcome-text.less
@@ -55,4 +55,8 @@
 
 @media (min-width: @desktop-width) {
   /*desktop*/
+  .welcome-text {
+    padding-left: 310px;
+    padding-right: 310px;
+  }
 }
