--- a/source/less/blocks/features-list.less
+++ b/source/less/blocks/features-list.less
@@ -42,8 +42,11 @@
   width: 37px;
 
   @media (min-width: @tablet-width) {
-    top: 27px;
-    left: 60px;
+    // top: 30px;
+    // left: 60px;
+    margin: auto;
+    left: 0;
+    right: 0;
     background-size: 75px 78px;
     height: 78px;
     width: 75px;
@@ -61,8 +64,11 @@
   width: 32px;
 
   @media (min-width: @tablet-width) {
-    top: 28px;
-    left: 62px;
+    // top: 28px;
+    // left: 62px;
+    margin: auto;
+    left: 0;
+    right: 0;
     background-size: 73px 75px;
     height: 75px;
     width: 73px;
@@ -80,8 +86,11 @@
   width: 37px;
 
   @media (min-width: @tablet-width) {
-    top: 30px;
-    left: 60px;
+    // top: 30px;
+    // left: 60px;
+    margin: auto;
+    left: 0;
+    right: 0;
     background-size: 76px 75px;
     height: 75px;
     width: 76px;
@@ -101,6 +110,7 @@
   .features-list {
     display: flex;
     justify-content: space-between;
+    padding: 0;
   }
 
   .features-list__item {
@@ -109,6 +119,7 @@
 
     width: 33.3%;
     box-sizing: border-box;
+    padding-bottom: 60px;
 
     // border: 2px solid @black;
     // margin: 2px;
