Задание 5 - верстка modile версии index.html ч.6

--- a/source/less/blocks/hotel-search.less
+++ b/source/less/blocks/hotel-search.less
@@ -80,4 +80,18 @@
 
 @media (min-width: @desktop-width) {
   /*desktop*/
+  .hotel-search {
+    padding-bottom: 67px;
+  }
+
+  .hotel-search__header {
+    padding-top: 27px;
+  }
+
+  .hotel-search__description {
+    padding-top: 30px;
+    padding-bottom: 48px;
+    padding-left: 350px;
+    padding-right: 350px;
+  }
 }
