--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -38,24 +38,6 @@
   // padding: 2px;
 }
 
-.page-footer__develop-link {
-  padding-bottom: 50px;
-
-  &:hover path,
-  &:focus path {
-    fill: #81b3d2;
-  }
-
-  &:active path {
-    fill: #b2b2b2;
-  }
-}
-
-.page-footer__develop-link svg {
-  vertical-align: middle;
-  padding-left: 10px;
-}
-
 @media (min-width: @tablet-width) {
   .social {
     padding-bottom: 40px;
@@ -68,4 +50,7 @@
 
 @media (min-width: @desktop-width) {
   /*desktop*/
+  .social {
+    padding-bottom: 0;
+}
 }
