Задание 5 - верстка photo.html ч.1

--- a/source/less/blocks/features-list.less
+++ b/source/less/blocks/features-list.less
@@ -42,7 +42,7 @@
   width: 37px;
 
   @media (min-width: @tablet-width) {
-    // top: 30px;
+    top: 28px;
     // left: 60px;
     margin: auto;
     left: 0;
@@ -64,7 +64,7 @@
   width: 32px;
 
   @media (min-width: @tablet-width) {
-    // top: 28px;
+    top: 28px;
     // left: 62px;
     margin: auto;
     left: 0;
@@ -86,7 +86,7 @@
   width: 37px;
 
   @media (min-width: @tablet-width) {
-    // top: 30px;
+    top: 30px;
     // left: 60px;
     margin: auto;
     left: 0;
