--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -9,6 +9,7 @@
   position: relative;
 
   background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-position: bottom;
   background-repeat: no-repeat;
   background-color: @light-blue;
   text-align: center;
@@ -26,28 +27,42 @@
       z-index: 1;
     }
   }
+
+  &__text-image {
+    padding-top: 90px;
+    padding-bottom: 80px;
+    max-width: 100%;
+    height: auto;
+  }
 }
 
-.promo__text-image {
-  padding-top: 90px;
-  padding-bottom: 80px;
-  max-width: 100%;
-  height: auto;
-}
+// .promo__text-image {
+//   padding-top: 90px;
+//   padding-bottom: 80px;
+//   max-width: 100%;
+//   height: auto;
+// }
 
 @media (min-width: @tablet-width) {
   .promo {
     background-image: url("../../img/bg-back-tablet@1x.jpg");
+    background-position: bottom;
+
+    &__text-image {
+      padding-top: 77px;
+      padding-bottom: 85px;
+    }
   }
 
-  .promo__text-image {
-    padding-top: 77px;
-    padding-bottom: 85px;
-  }
+  // .promo__text-image {
+  //   padding-top: 77px;
+  //   padding-bottom: 85px;
+  // }
 }
 
 @media (min-width: @desktop-width) {
   .promo {
     background-image: url("../../img/bg-back-desktop@1x.jpg");
+    background-position: bottom;
   }
 }
