--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -148,6 +148,11 @@
 @media (min-width: @desktop-width) {
   /*desktop*/
   .reasons--other {
-    padding-bottom: 91px;
+    padding-bottom: 65px;
+  }
+
+  .reasons__header {
+    padding-left: 95px;
+    padding-right: 95px;
   }
 }
